propellor (5.4.1) UNRELEASED; urgency=medium

  * Modernized and simplified the MetaTypes implementation now that
    compatability with ghc 7 is no longer needed.

 -- Joey Hess <id@joeyh.name>  Fri, 18 May 2018 10:25:05 -0400

propellor (5.4.0) unstable; urgency=medium

  [ Sean Whitton ]
  * Apt.installedBackport replaced with Apt.backportInstalled.  (API change)
    The old property would install dependencies from backports even when
    the versions in stable satisfy the requested backport's dependencies.
    The new property installs only the listed packages from backports;
    all other dependencies come from stable.
    So in some cases, you may need to list additional backports to install,
    that would not have needed to be listed before. Due to this behavior
    change the property has been renamed so uses of it will be checked.
  * Restic.installed: stop trying to install a backport on jessie, because no
    such backport exists.

 -- Joey Hess <id@joeyh.name>  Thu, 17 May 2018 10:43:20 -0400

propellor (5.3.6) unstable; urgency=medium

  * Fix build with ghc 8.4, which broke due to the Semigroup Monoid change.
  * Dropped support for building propellor with ghc 7 (as in debian
    oldstable), to avoid needing to depend on the semigroups transitional
    package, but also because it's just too old to be worth supporting.
  * stack.yaml: Updated to lts-9.21.
  * Make Schroot.overlaysInTmpfs revertable
    Thanks, Sean Whitton
  * Update shim each time propellor is run in a container, to deal with
    library version changes.
  * Unbound: Added support for various DNS record types.
    Thanks, Félix Sipma.

 -- Joey Hess <id@joeyh.name>  Wed, 09 May 2018 16:24:37 -0400

propellor (5.3.5) unstable; urgency=medium

  * Apt.stdSourcesList now adds stable-updates suite
    Thanks, Sean Whitton
  * Significantly increased propellor build speed when your config.hs
    is in a fork of the propellor repository, by avoiding redundant builds